manifests/pay_nginx_svc.yml
kind: Service
apiVersion: v1
metadata:
  name: pay_nginx_svc
  labels:
    app: pay_nginx
    tier: backend
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 32380
  selector:
    tier: backend
    app: nginx
  type: nodePort
