manifests/pay_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: pay_svc
  labels:
    tier: backend
spec:
  selector:
    app: pay
    tier: backend
  ports:
    - protocol: TCP
      port: 9000
